# dart-fil-transaction-codec

./: pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/fil_codec/: FilCodecPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/fil_codec_example/: MainActivity.kt
example/ios/Flutter/: .last_build_id
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: fil_codec.podspec
ios/Classes/: FilCodecPlugin.h  FilCodecPlugin.m  MylibPlugin.h  SwiftFilCodecPlugin.swift  SwiftMylibPlugin.swift
lib/: bindings.dart  fil_codec.dart  fil_codec_method_channel.dart  fil_codec_platform_interface.dart  lib.dart  mylib.dart
lib/src/: address.dart  bindings.dart  ffi.dart  transaction.dart
rust/: Cargo.toml  makefile
rust/src/: lib.rs
test/: fil_codec_method_channel_test.dart  fil_codec_test.dart
